# pariter

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
benches/: bench.rs
docs/bench-report/fibonacci(10)/1/report/: index.html
docs/bench-report/fibonacci(10)/100/report/: index.html
docs/bench-report/fibonacci(10)/1000/report/: index.html
docs/bench-report/fibonacci(10)/10000/report/: index.html
docs/bench-report/fibonacci(10)/100000/report/: index.html
docs/bench-report/fibonacci(10)/map/1/base/: raw.csv  sample.json  tukey.json
docs/bench-report/fibonacci(10)/map/1/new/: benchmark.json  estimates.json
docs/bench-report/fibonacci(10)/map/1/report/: index.html
docs/bench-report/fibonacci(10)/map/100/base/: tukey.json
docs/bench-report/fibonacci(10)/map/100/new/: benchmark.json  estimates.json  raw.csv  sample.json
docs/bench-report/fibonacci(10)/map/report/: index.html
docs/bench-report/fibonacci(10)/parallel_map-t1/report/: index.html
docs/bench-report/fibonacci(10)/parallel_map-t2/report/: index.html
docs/bench-report/fibonacci(10)/parallel_map-t4/report/: index.html
docs/bench-report/fibonacci(10)/report/: index.html
docs/bench-report/fibonacci(11)/1/report/: index.html
docs/bench-report/fibonacci(11)/100/report/: index.html
docs/bench-report/fibonacci(11)/1000/report/: index.html
docs/bench-report/fibonacci(11)/10000/report/: index.html
docs/bench-report/fibonacci(11)/100000/report/: index.html
docs/bench-report/fibonacci(11)/map/report/: index.html
docs/bench-report/fibonacci(11)/parallel_map-t1/report/: index.html
docs/bench-report/fibonacci(11)/parallel_map-t2/report/: index.html
docs/bench-report/fibonacci(11)/parallel_map-t4/report/: index.html
docs/bench-report/fibonacci(11)/report/: index.html
docs/bench-report/fibonacci(12)/1/report/: index.html
docs/bench-report/fibonacci(12)/100/report/: index.html
docs/bench-report/fibonacci(12)/1000/report/: index.html
docs/bench-report/fibonacci(12)/10000/report/: index.html
docs/bench-report/fibonacci(12)/100000/report/: index.html
docs/bench-report/fibonacci(12)/map/report/: index.html
docs/bench-report/fibonacci(12)/parallel_map-t1/report/: index.html
docs/bench-report/fibonacci(12)/parallel_map-t2/report/: index.html
docs/bench-report/fibonacci(12)/parallel_map-t4/report/: index.html
docs/bench-report/fibonacci(12)/report/: index.html
docs/bench-report/report/: index.html
examples/: simple_profiler.rs
src/: lib.rs  parallel_filter.rs  parallel_map.rs  profile.rs  readahead.rs  tests.rs
src/profile/: simple.rs
(+349 files in other folders)
