[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Parallel iterator processing"
documentation = "https://docs.rs/dpc-pariter"
edition = "2018"
homepage = "https://github.com/dpc/pariter"
keywords = ["parallel", "iterator", "parallel_map"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
name = "dpc-pariter"
readme = "README.md"
repository = "https://github.com/dpc/pariter"
version = "0.1.0"
[[bench]]
harness = false
name = "bench"

[dependencies]
crossbeam-channel = "0.5.0"
lazy_static = "1.4"
num_cpus = "1.13"

[dependencies.rusty_pool]
default-features = false
version = "0.6"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
