[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Parallel iterator processing"
documentation = "https://docs.rs/pariter"
edition = "2018"
rust-version = "1.71"
homepage = "https://github.com/dpc/pariter"
keywords = ["parallel", "iterator", "parallel_map"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
name = "pariter"
readme = "README.md"
repository = "https://github.com/dpc/pariter"
version = "0.6.0"

[[bench]]
harness = false
name = "bench"

[dependencies]
crossbeam-channel = "0.5.0"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"

[package.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n## [Unreleased](https://github.com/dpc/pariter/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly = 1 },
]
shared-version = true
